-----------
FRUIT 3.2.2
-----------

FruitProcessor warns if user-specifiled filenames given in
  fp.process_only = [ (filenames) ]
line not match with *_test.f(90|95|03|07)
or any of the corresponding files is absent.

rake_estimate.rb warns if two fortran source files
define the same module name.


-----------
FRUIT 3.2.1
-----------

Order of test methods can be made random by setting
   fp.shuffle = true
in rakefile. For example, see self_test/rakefile.

Fruit processor checks if test module name and its file name are consistent.
A method "module_name_consistent?" in fruit_processor_gem/lib/fruit_processor.rb
does it.

Log output from rake_estimate.rb on file dependencies is reduced.
To see extra info on dependencies, set 
   $show_info = true
in rakefile. See sample_multi_dir/build/rakefile for example.

Unnecessary dependencies given in rake_base_deps.rb are removed.

Sample of rakefile for building main program using rake_estimate.rb is added.
See sample_selective/rakefile_main.
It estimates dependencies between modules.


-----------
FRUIT 3.2.0
-----------

+ Works on FTN95. 
  FTN95 is Fortran compiler for Windows.
  http://www.silverfrost.com

+ Works on gfortran of TDM-GCC on Windows.
  http://tdm-gcc.tdragon.net/

+ To support extension .obj and backslash path,
  rake_base.rb is divided into 
  compiler definition part (rake_base.rb) and
  dependencies part (rake_base_deps.rb).


-----------
FRUIT 3.1.0
-----------

+ LICENSE.txt added

+ Comment on copyright added to each file

+ Samples added or changed

  + sample_build_dir 
    This sample puts *.o, *.mod, *_gen.f90, and executable to a sub directry.

  + sample
    rakefile "rakefile_mingw" added that works with MinGW.
    It does not use library. Instead fruit.f90 and fruit_util.f90 are compiled.

  + sample_multi_dir
    Source files in multiple directries are compiled within single rakefile.
    This sample puts *.o, *.mod, *_gen.f90, and executable to a sub directry.